完善一下功能。